# NetworkManager

./: .clang-format  .cvsignore  .dir-locals.el  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .labels-migration.yml  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .triage-policies.yml  AUTHORS  CONTRIBUTING  CONTRIBUTING.md  COPYING  ChangeLog  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile.am  Makefile.examples  Makefile.glib  Makefile.in  Makefile.vapigen  NEWS  NEWS.md  NetworkManager  NetworkManager.h  NetworkManager.pc.in  README  README.md  RELICENSE.md  TODO  WIP.txt  aclocal.m4  autogen.sh  check-distro.py  (+21 more)
callouts/: 77-nm-probe-modem-capabilities.rules  77-nm-zte-port-types.rules  Makefile.am  nm-avahi-autoipd-action.c  nm-avahi-autoipd.conf  nm-dhcp-client-action.c  nm-dhcp-client.conf  nm-dispatcher-action.c  nm-dispatcher-action.h  nm-dispatcher-api.h  nm-dispatcher-utils.c  nm-dispatcher-utils.h  nm-dispatcher.c  nm-dispatcher.conf  nm-dispatcher.xml  nm-modem-probe.c  org.freedesktop.nm_dispatcher.service  org.freedesktop.nm_dispatcher.service.in
clients/: Makefile.am  meson.build  nm-online.c
data/: 77-nm-olpc-mesh.rules  84-nm-drivers.rules  85-nm-unmanaged.rules  90-nm-thunderbolt.rules  Makefile.am  NetworkManager-config-initrd.service.in  NetworkManager-contrail.conf  NetworkManager-dispatcher.service.in  NetworkManager-ifcfg-rh-migration.service.in  NetworkManager-initrd.service.in  NetworkManager-ovs.conf  NetworkManager-wait-online-initrd.service.in  NetworkManager-wait-online-systemd-pre200.service.in  NetworkManager-wait-online.service.in  NetworkManager.service.in  meson.build  nm-priv-helper.service.in  nm-shared.xml  nm-sudo.service.in  org.freedesktop.NetworkManager.policy.in  org.freedesktop.NetworkManager.policy.in.in  org.freedesktop.NetworkManager.rules.in  org.freedesktop.NetworkManager.service.in  server.conf.in
dhcpcd/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  arp.c  arp.h  buildmsg.c  buildmsg.h  client.c  client.h  dhcp_test.c  dhcpcd.c  dhcpcd.h  dhcpconfig.c  udpipgen.c  udpipgen.h
dispatcher/: Makefile.am  meson.build  nm-dispatcher-utils.c  nm-dispatcher-utils.h  nm-dispatcher.c  nm-dispatcher.conf  nm-dispatcher.xml  org.freedesktop.nm_dispatcher.service.in
dispatcher-daemon/: .cvsignore  Makefile.am  Makefile.in  NetworkManagerDispatcher.c
docs/: Makefile.am  NetworkManager DBUS API.txt  generate-settings-spec.c  meson.build  sandboxing.md
gfilemonitor/: COPYING  Makefile.am  README  gfile.c  gfile.h  gfilemonitor.c  gfilemonitor.h  glocaldirectorymonitor.c  glocaldirectorymonitor.h  glocalfilemonitor.c  glocalfilemonitor.h  inotify-diag.c  inotify-diag.h  inotify-helper.c  inotify-helper.h  inotify-kernel.c  inotify-kernel.h  inotify-missing.c  inotify-missing.h  inotify-path.c  inotify-path.h  inotify-sub.c  inotify-sub.h
include/: Makefile.am  NetworkManager.h  NetworkManagerVPN.h  gsystem-local-alloc.h  nm-dbus-glib-types.h  nm-default.h  nm-glib-compat.h  nm-glib.h  nm-gvaluearray-compat.h  nm-macros-internal.h  nm-settings-flags.h  nm-test-helpers.h  nm-test-libnm-utils.h  nm-test-utils-impl.c  nm-test-utils.h  nm-utils-internal.h  nm-version-macros.h.in  nm-version.h.in  wireless-helper.h
info-daemon/: .cvsignore  Makefile.am  NetworkManagerInfo.c  NetworkManagerInfo.conf  NetworkManagerInfo.h  NetworkManagerInfoDbus.c  NetworkManagerInfoDbus.h  NetworkManagerInfoNetworksDialog.c  NetworkManagerInfoNetworksDialog.h  NetworkManagerInfoPassphraseDialog.c  NetworkManagerInfoPassphraseDialog.h  NetworkManagerInfoVPN.c  NetworkManagerInfoVPN.h  networks.glade  passphrase.glade
initscript/: .cvsignore  Makefile.am  Makefile.in  NMLaunchHelper.c  NetworkManager
introspection/: Makefile.am  all.xml  all.xml.in  errors.xml  generic-types.xml  meson.build  nm-access-point.xml  nm-active-connection.xml  nm-agent-manager.xml  nm-checkpoint.xml  nm-device-802-11-wireless.xml  nm-device-802-3-ethernet.xml  nm-device-adsl.xml  nm-device-bond.xml  nm-device-bridge.xml  nm-device-bt.xml  nm-device-cdma.xml  nm-device-ethernet.xml  nm-device-generic.xml  nm-device-gre.xml  nm-device-gsm.xml  nm-device-infiniband.xml  nm-device-ip-tunnel.xml  nm-device-macvlan.xml  nm-device-modem.xml  nm-device-olpc-mesh.xml  nm-device-serial.xml  nm-device-statistics.xml  nm-device-team.xml  nm-device-tun.xml  nm-device-veth.xml  nm-device-vlan.xml  nm-device-vxlan.xml  nm-device-wifi.xml  nm-device-wimax.xml  nm-device.xml  nm-dhcp4-config.xml  nm-dhcp6-config.xml  nm-exported-connection.xml  nm-ip4-config.xml  (+70 more)
libnm-core/: Makefile.am  Makefile.libnm-core  NetworkManager.h  NetworkManagerVPN.h  crypto.c  crypto.h  crypto_gnutls.c  crypto_nss.c  meson.build  nm-connection-private.h  nm-connection.c  nm-connection.h  nm-core-enum-types.c.template  nm-core-enum-types.h.template  nm-core-internal.h  nm-core-types-internal.h  nm-core-types.h  nm-crypto-gnutls.c  nm-crypto-impl.h  nm-crypto-nss.c  nm-crypto.c  nm-crypto.h  nm-dbus-interface.h  nm-dbus-utils.c  nm-errors.c  nm-errors.h  nm-ethtool-utils.h  nm-jansson.c  nm-jansson.h  nm-json.c  nm-json.h  nm-keyfile-internal.h  nm-keyfile-reader.c  nm-keyfile-reader.h  nm-keyfile-utils.c  nm-keyfile-utils.h  nm-keyfile-writer.c  nm-keyfile-writer.h  nm-keyfile.c  nm-keyfile.h  (+133 more)
libnm-glib/: Makefile.am  libnm-glib-test.c  libnm-glib-vpn.pc.in  libnm-glib-vpn.ver  libnm-glib.pc.in  libnm-glib.ver  libnm_glib.c  libnm_glib.h  libnm_glib.pc.in  libnm_glib.ver  libnm_glib_vpn.pc.in  libnm_glib_vpn.ver  meson.build  nm-access-point.c  nm-access-point.h  nm-active-connection.c  nm-active-connection.h  nm-cdma-device.c  nm-cdma-device.h  nm-client.c  nm-client.h  nm-dbus-connection.c  nm-dbus-connection.h  nm-dbus-helpers-private.h  nm-dbus-helpers.c  nm-dbus-settings-system.c  nm-dbus-settings-system.h  nm-dbus-settings.c  nm-dbus-settings.h  nm-dbus-utils.c  nm-dbus-utils.h  nm-device-802-11-wireless.c  nm-device-802-11-wireless.h  nm-device-802-3-ethernet.c  nm-device-802-3-ethernet.h  nm-device-adsl.c  nm-device-adsl.h  nm-device-bond.c  (+90 more)
(+6121 files in other folders)
